# advent-of-code-2023

./: README.md  aoc2023.cabal  scaffold.sh
app/: Main.hs
inputs/day13/: test2.txt
inputs/day20/: real.txt
src/AOC2023/: .Day02.hs.swp  Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs  Day08.hs  Day09.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day18.hs  Day19.hs  Day20.hs  Day21.hs  Lib.hs
test/AOC2023/: .Day02Spec.hs.swp  Day01Spec.hs  Day02Spec.hs  Day03Spec.hs  Day04Spec.hs  Day05Spec.hs  Day06Spec.hs  Day07Spec.hs  Day08Spec.hs  Day09Spec.hs  Day10Spec.hs  Day11Spec.hs  Day12Spec.hs  Day13Spec.hs  Day14Spec.hs  Day15Spec.hs  Day16Spec.hs  Day18Spec.hs  Day19Spec.hs  Day20Spec.hs  Day21Spec.hs  LibSpec.hs
