cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Elliot Davies
maintainer:         elliot.a.davies@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    default-language: GHC2021
    build-depends:
        base == 4.*
        , mtl >= 2.2
    ghc-options:
        -Wall

library
    import: shared-properties
    build-depends:
        parsec >= 3.1
        , vector >= 0.13
        , containers >= 0.6
    exposed-modules:
        AOC2023.Lib
        AOC2023.Day01
        AOC2023.Day02
        AOC2023.Day03
    hs-source-dirs: src

executable aoc2023
    import: shared-properties
    main-is: Main.hs
    build-depends:
        aoc2023
    hs-source-dirs: app

test-suite spec
    import: shared-properties
    type: exitcode-stdio-1.0
    other-modules:
        AOC2023.LibSpec
        AOC2023.Day01Spec
        AOC2023.Day02Spec
        AOC2023.Day03Spec
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        aoc2023
        , hspec >= 2.7
        , hspec-discover >= 2.7
        , parsec >= 3.1
    build-tool-depends:
        hspec-discover:hspec-discover
