cabal-version:      2.4
name:               aoc2023
version:            0.1.0.0

author:             Elliot Davies
maintainer:         elliot.a.davies@gmail.com

extra-source-files: CHANGELOG.md

common shared-properties
    default-language: GHC2021
    default-extensions:
        LambdaCase
    build-depends:
        base == 4.*
        , mtl >= 2.2
        , containers >= 0.6
        , vector >= 0.13
        , parsec >= 3.1
    ghc-options:
        -Wall
        -Wno-unused-do-bind

library
    import: shared-properties
    exposed-modules:
        AOC2023.Lib
        AOC2023.Day01
        AOC2023.Day02
        AOC2023.Day03
        AOC2023.Day04
        AOC2023.Day05
        AOC2023.Day06
        AOC2023.Day07
        AOC2023.Day08
        AOC2023.Day09
        AOC2023.Day10
        AOC2023.Day11
        AOC2023.Day12
        AOC2023.Day13
        AOC2023.Day14
        AOC2023.Day15
        AOC2023.Day16
        AOC2023.Day18
        AOC2023.Day19
        AOC2023.Day20
    hs-source-dirs: src

executable aoc2023
    import: shared-properties
    main-is: Main.hs
    build-depends:
        aoc2023
    hs-source-dirs: app

test-suite spec
    import: shared-properties
    type: exitcode-stdio-1.0
    other-modules:
        AOC2023.LibSpec
        AOC2023.Day01Spec
        AOC2023.Day02Spec
        AOC2023.Day03Spec
        AOC2023.Day04Spec
        AOC2023.Day05Spec
        AOC2023.Day06Spec
        AOC2023.Day07Spec
        AOC2023.Day08Spec
        AOC2023.Day09Spec
        AOC2023.Day10Spec
        AOC2023.Day11Spec
        AOC2023.Day12Spec
        AOC2023.Day13Spec
        AOC2023.Day14Spec
        AOC2023.Day15Spec
        AOC2023.Day16Spec
        AOC2023.Day18Spec
        AOC2023.Day19Spec
        AOC2023.Day20Spec
    hs-source-dirs: test
    main-is: Spec.hs
    build-depends:
        aoc2023
        , hspec >= 2.7
        , hspec-discover >= 2.7
    build-tool-depends:
        hspec-discover:hspec-discover
